force-app/main/default/objects/CARE_Facility__c/CARE_Facility__c.object-meta.xml
<CustomObject>
    <label>CARE Facility</label>
    <nameField>
        <displayFormat>CF{000000000}</displayFormat>
        <label>Facility No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Facility</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>