force-app/main/default/objects/CARE_Facility__c/fields/CARE_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CARE_Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CARE Facility</relationshipLabel>
    <relationshipName>CARE_Facility</relationshipName>
    <type>Lookup</type>
</CustomField>