force-app/main/default/objects/CARE_Facility__c/fields/CARE_Metering_Type__c.field-meta.xml
<CustomField>
    <fullName>CARE_Metering_Type__c</fullName>
    <inlineHelpText>Type of meter</inlineHelpText>
    <label>Metering Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>