force-app/main/default/objects/CARE_Facility__c/fields/CARE_Number_Of_Residents__c.field-meta.xml
<CustomField>
    <fullName>CARE_Number_Of_Residents__c</fullName>
    <inlineHelpText>Number of residents</inlineHelpText>
    <label>Number Of Residents</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>