force-app/main/default/objects/CARE_Facility__c/fields/CARE_Status__c.field-meta.xml
<CustomField>
    <fullName>CARE_Status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>