force-app/main/default/objects/CARE_Facility__c/fields/CERT_DATE__c.field-meta.xml
<CustomField>
    <fullName>CERT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CERT DATE</label>
    <type>Date</type>
</CustomField>