force-app/main/default/objects/CARE_Facility__c/fields/CURR_CARE_ELEC__c.field-meta.xml
<CustomField>
    <fullName>CURR_CARE_ELEC__c</fullName>
    <label>CURR CARE ELEC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>