force-app/main/default/objects/CARE_Facility__c/fields/FACILITY_CLASSIFICATION__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_CLASSIFICATION__c</fullName>
    <label>FACILITY CLASSIFICATION</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>MFHC</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>