force-app/main/default/objects/CARE_Facility__c/fields/FACILITY_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_EMAIL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FACILITY EMAIL</label>
    <length>254</length>
    <type>Text</type>
</CustomField>