force-app/main/default/objects/CARE_Facility__c/fields/FACILITY_FAX__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_FAX__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FACILITY FAX</label>
    <length>15</length>
    <type>Text</type>
</CustomField>