force-app/main/default/objects/CARE_Facility__c/fields/FACILITY_ID__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_ID__c</fullName>
    <label>FACILITY ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>