force-app/main/default/objects/CARE_Facility__c/fields/FACILITY_NAME__c.field-meta.xml
<CustomField>
    <fullName>FACILITY_NAME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FACILITY NAME</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>