force-app/main/default/objects/CARE_Facility__c/fields/IS_AE_HOUSING__c.field-meta.xml
<CustomField>
    <fullName>IS_AE_HOUSING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS AE HOUSING</label>
    <type>Checkbox</type>
</CustomField>