force-app/main/default/objects/CARE_Facility__c/fields/IS_COUNSELING__c.field-meta.xml
<CustomField>
    <fullName>IS_COUNSELING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS COUNSELING</label>
    <type>Checkbox</type>
</CustomField>