force-app/main/default/objects/CARE_Facility__c/fields/IS_EMP_HOUSING_PVT__c.field-meta.xml
<CustomField>
    <fullName>IS_EMP_HOUSING_PVT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS EMP HOUSING PVT</label>
    <type>Checkbox</type>
</CustomField>