force-app/main/default/objects/CARE_Facility__c/fields/IS_GROUP_LIVING__c.field-meta.xml
<CustomField>
    <fullName>IS_GROUP_LIVING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS GROUP LIVING</label>
    <type>Checkbox</type>
</CustomField>