force-app/main/default/objects/CARE_Facility__c/fields/IS_HOMELESS__c.field-meta.xml
<CustomField>
    <fullName>IS_HOMELESS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS HOMELESS</label>
    <type>Checkbox</type>
</CustomField>