force-app/main/default/objects/CARE_Facility__c/fields/IS_HOSPICE__c.field-meta.xml
<CustomField>
    <fullName>IS_HOSPICE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS HOSPICE</label>
    <type>Checkbox</type>
</CustomField>