force-app/main/default/objects/CARE_Facility__c/fields/IS_LODGING__c.field-meta.xml
<CustomField>
    <fullName>IS_LODGING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS LODGING</label>
    <type>Checkbox</type>
</CustomField>