force-app/main/default/objects/CARE_Facility__c/fields/IS_MEALS__c.field-meta.xml
<CustomField>
    <fullName>IS_MEALS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS MEALS</label>
    <type>Checkbox</type>
</CustomField>