force-app/main/default/objects/CARE_Facility__c/fields/IS_MFHC__c.field-meta.xml
<CustomField>
    <fullName>IS_MFHC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS MFHC</label>
    <type>Checkbox</type>
</CustomField>