force-app/main/default/objects/CARE_Facility__c/fields/IS_OTHER__c.field-meta.xml
<CustomField>
    <fullName>IS_OTHER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS OTHER</label>
    <type>Checkbox</type>
</CustomField>