force-app/main/default/objects/CARE_Facility__c/fields/IS_REHAB__c.field-meta.xml
<CustomField>
    <fullName>IS_REHAB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS REHAB</label>
    <type>Checkbox</type>
</CustomField>