force-app/main/default/objects/CARE_Facility__c/fields/IS_SATELLITE__c.field-meta.xml
<CustomField>
    <fullName>IS_SATELLITE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS SATELLITE</label>
    <type>Checkbox</type>
</CustomField>