force-app/main/default/objects/CARE_Facility__c/fields/IS_TRAINING__c.field-meta.xml
<CustomField>
    <fullName>IS_TRAINING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS TRAINING</label>
    <type>Checkbox</type>
</CustomField>