force-app/main/default/objects/CARE_Facility__c/fields/IS_WOMENS_SHELTER__c.field-meta.xml
<CustomField>
    <fullName>IS_WOMENS_SHELTER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS WOMENS SHELTER</label>
    <type>Checkbox</type>
</CustomField>