force-app/main/default/objects/CARE_Facility__c/fields/MAILING_ADDRESS1__c.field-meta.xml
<CustomField>
    <fullName>MAILING_ADDRESS1__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>MAILING ADDRESS1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>