force-app/main/default/objects/CARE_Facility__c/fields/MANAGER_NAME__c.field-meta.xml
<CustomField>
    <fullName>MANAGER_NAME__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>MANAGER NAME</label>
    <length>64</length>
    <type>Text</type>
</CustomField>