force-app/main/default/objects/CARE_Facility__c/fields/METER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>METER_TYPE__c</fullName>
    <label>METER TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MASTER</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>