force-app/main/default/objects/CARE_Facility__c/fields/NAME_Facility_No__c.field-meta.xml
<CustomField>
    <fullName>NAME_Facility_No__c</fullName>
    <displayFormat>CF{000000000}</displayFormat>
    <label>NAME  (Facility No)</label>
    <type>AutoNumber</type>
</CustomField>