force-app/main/default/objects/CARE_Facility__c/fields/OTHER_DESC__c.field-meta.xml
<CustomField>
    <fullName>OTHER_DESC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTHER DESC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>