force-app/main/default/objects/CARE_Facility__c/fields/OWNER__c.field-meta.xml
<CustomField>
    <fullName>OWNER__c</fullName>
    <label>OWNER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CARE Facility (OWNER)</relationshipLabel>
    <relationshipName>CARE_Facility1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>