force-app/main/default/objects/CARE_Facility__c/fields/PHONE_EXT1__c.field-meta.xml
<CustomField>
    <fullName>PHONE_EXT1__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>PHONE EXT1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>