force-app/main/default/objects/CARE_Facility__c/fields/PHONE_EXT2__c.field-meta.xml
<CustomField>
    <fullName>PHONE_EXT2__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>PHONE EXT2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>