force-app/main/default/objects/CARE_Facility__c/fields/PHONE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PHONE_TYPE__c</fullName>
    <label>PHONE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WORK</fullName>
            </value>
            <value>
                <fullName>HOME</fullName>
            </value>
            <value>
                <fullName>MOBILE</fullName>
            </value>
            <value>
                <fullName>NOT SPECIFIED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>