force-app/main/default/objects/CARE_Facility__c/fields/SECONDARY_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>SECONDARY_CONTACT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SECONDARY CONTACT</label>
    <length>64</length>
    <type>Text</type>
</CustomField>