force-app/main/default/objects/CARE_Facility__c/fields/SECONDARY_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>SECONDARY_EMAIL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SECONDARY EMAIL</label>
    <length>254</length>
    <type>Text</type>
</CustomField>