force-app/main/default/objects/CARE_Facility__c/fields/SECONDARY_PHONE__c.field-meta.xml
<CustomField>
    <fullName>SECONDARY_PHONE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SECONDARY PHONE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>