force-app/main/default/objects/CARE_Facility__c/fields/TOTAL_GAS_UNITS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_GAS_UNITS__c</fullName>
    <label>TOTAL GAS UNITS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>