force-app/main/default/objects/CARE_Facility__c/recordTypes/AG.recordType-meta.xml
<RecordType>
    <fullName>AG</fullName>
    <active>true</active>
    <label>AG</label>
</RecordType>