force-app/main/default/objects/CARE_Facility__c/recordTypes/SM.recordType-meta.xml
<RecordType>
    <fullName>SM</fullName>
    <active>true</active>
    <label>SM</label>
</RecordType>